raven : user related content is now from dummy data

--- a/raven/index.html
+++ b/raven/index.html
@@ -24,8 +24,8 @@
                 Online <span class="blood_text">GradeSheet</span>
                 <div id="profile_div">
                     <span class="helper"></span>
-                    <img src="img/bulacs.png" width="34" height="34" alt="Mr. Rommel Bulalacao"/>
-                    Rommel Bulalacao
+                    <img src="" width="34" height="34" alt="" id="profile_img"/>
+                    <span id="profile_span"></span>
                     <button id="logout_button" title="Logout"></button>
                 </div>
             </header>
